--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -1,10 +1,11 @@
-.container {
+.products-wrapper {
     max-width: 800px;
-} 
+    margin: 0 auto;
+}
 
-.filters {
+.cards {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px auto;
+    flex-wrap: wrap;    
 }
